Overflow fix, checkboxes. Finidh added

--- a/src/Components/Amenities/amenities.css
+++ b/src/Components/Amenities/amenities.css
@@ -31,7 +31,7 @@
 
 .listHolder{
     display: flex;
-    justify-content: space-between;
+    
     padding: 22px 16px ;
     flex-wrap: wrap;
 
