--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -32,7 +32,7 @@
     
     box-sizing: border-box;
     width:971px;
-    height: 393px;
+    height: auto;
     border: 1px solid #E2E4E5;
     border-radius: 8px;
     margin-left: 36.5px ;
@@ -40,6 +40,8 @@
     padding: 32px;
     display: flex;
     justify-content: space-between;
+    
+    overflow: auto;
     
 
 
@@ -49,7 +51,7 @@
     border: none;
     width: 272px;
 height: 47px;
-top: 727px;
+
 left: 476px;
 gap: 8px;
 border-radius: 6px;
